tests/snapshots/assets__check_file@unit-code-chained-call.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/chained-call.typ
snapshot_kind: text
---
#{
  a
    .bbbbbbbbbbbbb()
    .c()
    .ddddddddddddddddddddddd
}

#{
  a
    .bbbbbbbbbbbbbb()[c][d]
    .eeeeeeeeee()
    .f()
}

#{
  a
    .bbbbbbbbbbbbbb()[c][d]
    .eeeeeeeeee()
    .f(123)[444][ccc]
}

#{
  let (
    title,
    _,
  ) = query(heading.where(level: 1))
    .map(e => (
        e.body,
        e.location().page(),
      ))
    .rev()
    .find(((_, v)) => v <= page)
}

#a.b()[c][d].eeeeeeeeeeeeeee().fffffffff()

#{
  (1,).rev().map(((n, c)) => f(n, c, 1))
}

#{
  padding
    .pairs()
    .map((k, x) => (k, x * 1.5))
    .to-dict()
}
#{
  let hlines_below_header = first-row-group-long-long
    .row_group-long-long-long-long
    .hlines-long-long-long-long
    .filter(h => (
    h.y == header_last_y + 1
  ))

  let hlines_below_header = first-row-group-long-long
    .row_group-long-long-long-long
    .hlines-long-long-long-long
    .filter((h, _) => (
    h.y == header_last_y + 1
  ))
}
