tests/snapshots/assets__check_file@unit-code-chained-call.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/chained-call.typ
---
#{
  a.bbbbbbbbbbbbb().c().ddddddddddddddddddddddd
}

#{
  a.bbbbbbbbbbbbbb()[c][d].eeeeeeeeee().f()
}

#{
  a.bbbbbbbbbbbbbb()[c][d].eeeeeeeeee().f(123)[444][ccc]
}

#{
  let (title, _) = query(heading.where(level: 1))
    .map(e => (e.body, e.location().page()))
    .rev()
    .find(((_, v)) => v <= page)
}

#a.b()[c][d].eeeeeeeeeeeeeee().fffffffff()

#{
  (1,).rev().map(((n, c)) => f(n, c, 1))
}
