tests/snapshots/assets__check_file@unit-code-closure-single-arg.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/closure-single-arg.typ
snapshot_kind: text
---
#{
  let row_len = 10
  let hlines = (
    (h: 1, y: 1),
    (h: 2, y: 2),
  )
  let new_hlines = range(
    0,
    row_len + 1,
  ).filter(y => (
    hlines.filter(h => h.y == y).len()
      == 0
  ))
  new_hlines
}
