tests/snapshots/assets__check_file@unit-code-cond.typ-0.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/cond.typ
snapshot_kind: text
---
#if not true {
  // false
}

#if (
  is-tablex-cell(cell)
    and type(cell.y)
      in (
        _int-type,
        _float-type,
      )
    and cell.y
      > acc
) {
  cell.y
} else {
  acc
}

#let a = 0

#let b = 1
