tests/snapshots/assets__check_file@unit-code-context.typ-120.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/code/context.typ
snapshot_kind: text
---
#set text(lang: "de")
#context [
  #set text(lang: "fr")
  #text.lang \
  #context text.lang
]

#context { text.size }

#context {
  text.size
}

#context { text.size }

// issues/129
#let foo() = (
  context {
    5
  }
)

#let foo() = context { 5 }

#let foo() = (
  context {
    5
  }
)

#let foo() = context { 5 }

#let foo = context {
  5
}

#let foo = context { 5 }

#let foo = context {
  5
}

#let foo = context { 5 }
