tests/snapshots/assets__check_file@unit-code-destruct-single-elem.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/code/destruct-single-elem.typ
snapshot_kind: text
---
#let (num,) = (1,)

#num

#let (((num,),),) = (((1,),),)

#num

#let (_,) = (((1,),),)

#let ((num),) = (1,)
#num
